# clfGraph-mojo

./: .codecov.yml  .dockerignore  .gitignore  Dockerfile  Dockerfile.sklearn  Dockerfile.torch  README.md  docker-compose.yml  pyproject.toml  requirements.txt  research_notes.md  tree.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  coverage.yaml
_int/: tbd.py
clfGraph/baseline/: models.py
clfGraph/data/: dl_script.py
clfGraph/data/final/: test_data.py
clfGraph/sklearn_baseline/: main.py  models.py
clfGraph/src/: app.py  attention.py  clf.py  clf_design.py  constants.py  custom_logging.py  data_processing.🔥  distributed_ray.py  dl_script.py  gnn.🔥  gnn_design.py  hf_hub.py  main.py  main_wandb.py  math.🔥  memgraph_db.py  mojo_math.🔥  pt_main_wandb.py  stix2.py  subgraphs.🔥  test_data.py  utils.py  vizualizations.py
clfGraph/src/clfgraph/: __init__.py  app.py  constants.py  dl_script.py  hf_hub.py  main.py  moe_design.py  pt_main_wandb.py  stix2.py  test_data.py  utils.py
clfGraph/src/clfgraph/db/: psql_model.sql
clfGraph/src/clfgraph/db/memgraph-client/src/: main.rs
clfGraph/src/clfgraph/db/postgresql/: Dockerfile.postgres
clfGraph/src/clfgraph/mojo_cpts/: subgraphs.🔥
clfGraph/src/clfgraph/mojo_cpts/tests/: mojo_tests.🔥
clfGraph/src/clfgraph/sklearn_baseline/: analysis.md  models.py
clfGraph/src/clfgraph/tests/: test_file_dl.py  test_stix.py
clfGraph/src/clfgraph_torch/mojo_cpts/: data_processing.🔥
clfGraph/src/db/: RustClient.md  mod.rs
clfGraph/src/db/memgraph-client/: Cargo.toml  Dockerfile.memgraph  memgraph_master.cypherl  memgraph_sub.cypherl
clfGraph/src/db/memgraph-client/src/: main.rs  memgraph.conf
clfGraph/src/db/postgresql/: Dockerfile.postgres  sqlalchemy_ops.py
clfGraph/src/distributed/: distributed_operationsv1.py.bak
clfGraph/src/hooks/: pre-commit
clfGraph/src/mojo_cpts/: mojo_math.🔥
clfGraph/src/research/: distributed_ray.py
clfGraph/src/sklearn_baseline/: models.py
dataset/: index.html
